k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopix
  labels:
    # Pod Security Admission — on démarre en « baseline ».
    # La démonstration sécurité du J2 bascule ce namespace en « restricted ».
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
